css changes pz - updating css for private zone 3rd commit

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -245,7 +245,7 @@ a.more-link{
 	}
 	.field-name-field-tool-link{
 		position: absolute;
-		right: 15px;
+		right: 0px;
 		margin-top: 15px;
 		a{
 			margin-top: 0px !important;
@@ -590,7 +590,7 @@ a.more-link{
 				}
 				.field-name-field-tool-link{
 					position: absolute;
-					margin-top: 15px;
+					margin-top: 0px;
 					a{
 						margin-top: 0px;
 					}
@@ -1699,7 +1699,7 @@ a.more-link{
 							}
 							.field-name-field-tool-link{
 								position: absolute;
-								right: 15px;
+								right: 0px;
 								margin-top: 15px;
 								a{
 									color: @color-text-grey;
@@ -2734,7 +2734,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			}
 			.field-name-field-tool-link{
 				position: absolute;
-				right: 15px;
+				right: 0px;
 				margin-top: 15px;
 				a{
 					margin-top: 0px;
@@ -3809,6 +3809,7 @@ div[id ^= "mini-panel-partner_in_"], {
 							padding:30px 0px;
 							margin-right: 0px;
 							margin-left: 0px;
+							position: relative;
 							.col-sm-3{
 								padding-left: 0px;
 							}
@@ -4299,9 +4300,8 @@ div[id ^= "mini-panel-partner_in_"], {
 	.page-title-wrapper{
 		h1{
 			color: @color-text-purple-darker;
-			padding-bottom: 15px;
 			padding-bottom: 0px;
-			margin-bottom: 10px;
+			margin-bottom: 15px;
 		}
 	}
 }
@@ -4312,6 +4312,7 @@ div[id ^= "mini-panel-partner_in_"], {
 		h1{
 			border-bottom: 2px solid @color-primary-dark !important;
 			margin-bottom: 25px;
+			padding-bottom: 10px;
 		}
 	}
 }
@@ -5167,7 +5168,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					input.form-checkbox{
 						display: none;
 					}
-					label{
+					> label{
 						padding-left: 0px;
 						margin-bottom: 0px;
 						&:first-child{
