--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7055,7 +7055,7 @@ a.more-link:before {
 .page-promotional-resources-search .field-name-field-tool-link,
 .page-search-site .field-name-field-tool-link {
   position: absolute;
-  right: 15px;
+  right: 0px;
   margin-top: 15px;
 }
 .oira-tools-search-page .field-name-field-tool-link a,
@@ -7371,7 +7371,7 @@ a.more-link:before {
 }
 .front .panels-flexible-row-new-6 .pane-tools .view-display-id-block_1 .field-name-field-tool-link {
   position: absolute;
-  margin-top: 15px;
+  margin-top: 0px;
 }
 .front .panels-flexible-row-new-6 .pane-tools .view-display-id-block_1 .field-name-field-tool-link a {
   margin-top: 0px;
@@ -8380,7 +8380,7 @@ a.more-link:before {
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-field-tool-link {
   position: absolute;
-  right: 15px;
+  right: 0px;
   margin-top: 15px;
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-field-tool-link a {
@@ -9354,7 +9354,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 #quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .field-name-field-tool-link,
 #quicktabs-container-view__country_partner_content__block_2 .quicktabs-tabpage .quicktabs-views-group .field-name-field-tool-link {
   position: absolute;
-  right: 15px;
+  right: 0px;
   margin-top: 15px;
 }
 #quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .field-name-field-tool-link a,
@@ -10380,6 +10380,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   padding: 30px 0px;
   margin-right: 0px;
   margin-left: 0px;
+  position: relative;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .col-sm-3 {
   padding-left: 0px;
@@ -10798,14 +10799,14 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 .page-node-add .page-title-wrapper h1,
 .page-node-update-profile .page-title-wrapper h1 {
   color: #786586;
-  padding-bottom: 15px;
   padding-bottom: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .page-node-91.node-type-partner .page-title-wrapper h1,
 .private-zone-page.private-images-page-selector .page-title-wrapper h1 {
   border-bottom: 2px solid #786586 !important;
   margin-bottom: 25px;
+  padding-bottom: 10px;
 }
 .menu-name-menu-private-zone {
   background-color: #786586;
@@ -11701,13 +11702,13 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 .oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes input.form-checkbox {
   display: none;
 }
-.oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column .form-type-checkboxes label,
-.oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes label {
+.oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column .form-type-checkboxes > label,
+.oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes > label {
   padding-left: 0px;
   margin-bottom: 0px;
 }
-.oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column .form-type-checkboxes label:first-child,
-.oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes label:first-child {
+.oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column .form-type-checkboxes > label:first-child,
+.oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes > label:first-child {
   font-family: 'Oswald';
   font-size: 1.2em;
   font-weight: normal;
@@ -11715,8 +11716,8 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   margin-bottom: 10px;
   cursor: pointer;
 }
-.oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column .form-type-checkboxes label:after,
-.oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes label:after {
+.oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column .form-type-checkboxes > label:after,
+.oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column .form-type-checkboxes > label:after {
   content: "\e250";
   font-family: "Glyphicons Halflings";
   margin-left: 10px;
